--- a/music_controller/frontend/static/css/index.css
+++ b/music_controller/frontend/static/css/index.css
@@ -1,3 +1,4 @@
+
 html,
 body {
   height: 100%;
@@ -21,6 +22,6 @@ body {
 .center {
   position: absolute;
   top: 50%;
-  left: 50;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
